css/global/base.css
@layer base {
	* {
		box-sizing: border-box;
		margin: 0;
		padding: 0;
	}

	html {
		background: var(--color-SiteBackground);
		color: var(--color-SiteText);
		color-scheme: light dark;
		font-family: var(--typo-Default-font-family);
		font-synthesis: none;
		hyphens: auto;
		line-height: var(--typo-Default-line-height);
		scroll-padding-block-start: 4rem;
	}

	body {
		display: grid;
		grid-template-rows: min-content 1fr min-content;
		min-block-size: 100svh;
	}

	img,
	svg,
	iframe {
		block-size: auto;
		max-inline-size: 100%;
		vertical-align: middle;
	}

	figcaption {
		background: var(--color-HighlightBackground);
		padding-block: 0.75em;
		padding-inline: 1em;

		@media (forced-colors) {
			border: 0.0625rem solid;
			border-block-start: none;
		}
	}

	iframe {
		background: var(--color-HighlightBackground);
		border: var(--size-border-width-divider) solid currentcolor;
	}

	a {
		color: var(--color-Brand);
		text-underline-offset: 0.15em;
	}

	sup {
		line-height: 1;

		a {
			text-decoration: none;
		}
	}

	kbd {
		background: var(--color-HighlightBackground);
		box-shadow: 0.1em 0.1em currentcolor;
		font-family: var(--typo-Code-font-family);
		font-size: var(--typo-Code-font-size);
		padding-inline: 0.2em;

		@media (forced-colors) {
			border: 0.0625rem solid;
		}
	}

	::marker {
		color: var(--color-Brand);
	}

	:focus-visible {
		outline: 0.125rem solid var(--color-Brand);
		outline-offset: 0.2em;
	}
}

